Added more endpoints for second collection
